test/negative/105_arrow_instead_of_fatarrow.fx
// expect: =>
val x = match 1 { | 1 -> 10 | _ -> 0 }
println(x)
